==> particle-iot/device-os/hal/src/nRF52840/pwm_hal.cpp <==
#include "nrfx_pwm.h"
#include "nrf_gpio.h"
#include "pwm_hal.h"
#include "pinmap_hal.h"
#include "pinmap_impl.h"
#include "gpio_hal.h"
#define NRF5X_PWM_COUNT                     4
#define PWM_CHANNEL_NUM                     4
#define MAX_PWM_COUNTERTOP                  0x7FFF    // 15bit
#define MAX_PWM_FREQ                        500000    // 500kHz, base clock 16MHz, resolution value 16
#define MAX_PWM_PERIOD_US                   2         // 2us
#define MIN_PWM_FREQ                        4         // 4Hz
#define MIN_PWM_PERIOD_US                   250000    // 250ms
#define DEFAULT_RESOLUTION_BITS             8
#define MAX_RESOLUTION_BITS                 15

void HAL_PWM_Reset_Pin(uint16_t pin) {
    // Reset pwm resolution
    NRF5x_Pin_Info* PIN_MAP = HAL_Pin_Map();

    if (pin >= TOTAL_PINS || PIN_MAP[pin].pwm_instance == PWM_INSTANCE_NONE) {
        return;
    }

    uninit_pwm_pin(pin);
    PIN_MAP[pin].pwm_resolution = DEFAULT_RESOLUTION_BITS;
}

void HAL_PWM_Write(uint16_t pin, uint8_t value) {
    HAL_PWM_Write_With_Frequency_Ext(pin, value, DEFAULT_PWM_FREQ);
}

void HAL_PWM_Write_With_Frequency(uint16_t pin, uint8_t value, uint16_t pwm_frequency) {
    HAL_PWM_Write_With_Frequency_Ext(pin, value, pwm_frequency);
}

void HAL_PWM_Write_Ext(uint16_t pin, uint32_t value) {
    HAL_PWM_Write_With_Frequency_Ext(pin, value, DEFAULT_PWM_FREQ);
}

void HAL_PWM_Write_With_Frequency_Ext(uint16_t pin, uint32_t value, uint32_t pwm_frequency) {
    if ((pin >= TOTAL_PINS)            ||
        (pwm_frequency > MAX_PWM_FREQ) ||
        (pwm_frequency < MIN_PWM_FREQ) ||
        (value > (uint32_t)(1 << HAL_PWM_Get_Resolution(pin))))
    {
        return;
    }

    NRF5x_Pin_Info* PIN_MAP = HAL_Pin_Map();
    if (PIN_MAP[pin].pwm_instance == PWM_INSTANCE_NONE) {
        return;
    }

    if(init_pwm_pin(pin, value, pwm_frequency)) {
        return;
    }
}

uint16_t HAL_PWM_Get_Frequency(uint16_t pin) {
    return HAL_PWM_Get_Frequency_Ext(pin);
}

uint16_t HAL_PWM_Get_AnalogValue(uint16_t pin) {
    return HAL_PWM_Get_AnalogValue_Ext(pin);
}

uint32_t HAL_PWM_Get_Frequency_Ext(uint16_t pin) {
    if (pin >= TOTAL_PINS) {
        return 0;
    }

    NRF5x_Pin_Info* pin_info = HAL_Pin_Map() + pin;
    uint8_t pwm_num = pin_info->pwm_instance;
    if (pwm_num == PWM_INSTANCE_NONE) {
        return 0;
    }

    return PWM_MAP[pwm_num].frequency;
}

uint32_t HAL_PWM_Get_AnalogValue_Ext(uint16_t pin) {
    if (pin >= TOTAL_PINS) {
        return 0;
    }

    NRF5x_Pin_Info* pin_info = HAL_Pin_Map() + pin;
    uint8_t pwm_num = pin_info->pwm_instance;
    uint8_t pwm_channel = pin_info->pwm_channel;
    if (pwm_num == PWM_INSTANCE_NONE) {
        return 0;
    }

    if (!PWM_MAP[pwm_num].enabled) {
        return 0;
    }

    return PWM_MAP[pwm_num].values[pwm_channel];
}

uint32_t HAL_PWM_Get_Max_Frequency(uint16_t pin) {
    return MAX_PWM_FREQ;
}

void HAL_PWM_UpdateDutyCycle(uint16_t pin, uint16_t value) {
    HAL_PWM_Write_With_Frequency_Ext(pin, value, DEFAULT_PWM_FREQ);
}

void HAL_PWM_UpdateDutyCycle_Ext(uint16_t pin, uint32_t value) {
    HAL_PWM_Write_With_Frequency_Ext(pin, value, DEFAULT_PWM_FREQ);
}

uint8_t HAL_PWM_Get_Resolution(uint16_t pin) {
    if (pin >= TOTAL_PINS) {
        return 0;
    }

    NRF5x_Pin_Info* pin_info = HAL_Pin_Map() + pin;
    return pin_info->pwm_resolution;
}

void HAL_PWM_Set_Resolution(uint16_t pin, uint8_t resolution) {
    if (pin >= TOTAL_PINS || resolution > MAX_RESOLUTION_BITS || resolution < 1) {
        return;
    }

    NRF5x_Pin_Info* pin_info = HAL_Pin_Map() + pin;
    pin_info->pwm_resolution = resolution;
}
