==> particle-iot/device-os/hal/src/rtl872x/pwm_hal.cpp <==
#include "rtl8721d.h"
#include <cstring>
#include "pwm_hal.h"
#include "gpio_hal.h"
#define RTL_PWM_INSTANCE_NUM        2
#define KM0_PWM_INSTANCE            0
#define KM4_PWM_INSTANCE            1
#define KM0_PWM_CHANNEL_NUM         6
#define KM4_PWM_CHANNEL_NUM         18
#define MAX_PWM_CHANNEL_NUM         KM4_PWM_CHANNEL_NUM
#define RTL_XTAL_CLOCK_HZ           40000000    // XTAL frequency: 40MHz
#define RTL_PWM_TIM_MAX_RESOLUTION  16          // 16-bits timer
#define RTL_PWM_TIM_MIN_RESOLUTION  2           // As per: https://docs.particle.io/reference/device-os/firmware/#analogwriteresolution-pwm-
#define MAX_PRESCALER               256
#define DEFAULT_RESOLUTION          8

void hal_pwm_write_with_frequency_ext(uint16_t pin, uint32_t value, uint32_t frequency) {
    if (!isPwmPin(pin)) {
        return;
    }

    hal_pin_info_t* pinInfo = hal_pin_map() + pin;
    uint8_t instance = pinInfo->pwm_instance;
    uint8_t channel = pinInfo->pwm_channel;

    if (frequency < minFrequency() || frequency > maxFrequency()) {
        return;
    }

    if (pwmInfo[instance].state != PWM_STATE_ENABLED) {
        if (pwmTimBaseInit(&pwmInfo[instance]) != 0) {
            return;
        }
    }

    pwmPinInit(pin);

    pwmInfo[instance].frequency = frequency;
    if (value > ((uint32_t)(1 << pwmInfo[instance].channels[channel].resolution) - 1)) {
        value = (uint32_t)((1 << pwmInfo[instance].channels[channel].resolution) - 1);
    }
    pwmInfo[instance].channels[channel].value = value;

    // WARN: Changing the prescaler, the frequency of other channels those are using the same TIM
    // will be changed to this frequency automatically.
    uint32_t arr;
    uint8_t prescaler;
    calculateArrAndPrescaler(frequency, &arr, &prescaler);
    RTIM_PrescalerConfig(pwmInfo[instance].tim, prescaler, TIM_PSCReloadMode_Update);
    // Set resolution
    pwmSetArr(instance, arr);

    // Start PWM
    RTIM_CCxCmd(pwmInfo[instance].tim, channel, TIM_CCx_Enable);
}

void hal_pwm_write(uint16_t pin, uint8_t value) {
    hal_pwm_write_with_frequency_ext(pin, value, DEFAULT_PWM_FREQ);
}

void hal_pwm_write_ext(uint16_t pin, uint32_t value) {
    hal_pwm_write_with_frequency_ext(pin, value, DEFAULT_PWM_FREQ);
}

void hal_pwm_write_with_frequency(uint16_t pin, uint8_t value, uint16_t frequency) {
    hal_pwm_write_with_frequency_ext(pin, value, frequency);
}

void hal_pwm_update_duty_cycle_ext(uint16_t pin, uint32_t value) {
    if (!isPwmPin(pin)) {
        return;
    }

    const hal_pin_info_t* pinInfo = hal_pin_map() + pin;
    const uint8_t instance = pinInfo->pwm_instance;
    const uint32_t channel = pinInfo->pwm_channel;

    if (pwmInfo[instance].state != PWM_STATE_ENABLED) {
        if (pwmTimBaseInit(&pwmInfo[instance]) != 0) {
            return;
        }
    }

    if (value > ((uint32_t)(1 << pwmInfo[instance].channels[channel].resolution) - 1)) {
        value = (uint32_t)((1 << pwmInfo[instance].channels[channel].resolution) - 1);
    }
    pwmInfo[instance].channels[channel].value = value;

    // Set the pulse width
    pwmSetCcr(instance, channel, pwmInfo[instance].channels[channel].value);
}

void hal_pwm_update_duty_cycle(uint16_t pin, uint16_t value) {
    hal_pwm_update_duty_cycle_ext(pin, value);
}

uint32_t hal_pwm_get_max_frequency(uint16_t pin) {
    if (!isPwmPin(pin)) {
        return 0;
    }
    return maxFrequency();
}

uint32_t hal_pwm_get_frequency_ext(uint16_t pin) {
    if (!isPwmPin(pin)) {
        return 0;
    }
    // All of the channels using the same TIM are outputing the same frequency.
    // And we should return the current actual output frequency
    const hal_pin_info_t* pinInfo = hal_pin_map() + pin;
    const uint8_t instance = pinInfo->pwm_instance;
    return pwmInfo[instance].frequency;
}

uint16_t hal_pwm_get_frequency(uint16_t pin) {
    return hal_pwm_get_frequency_ext(pin);
}

uint16_t hal_pwm_get_analog_value(uint16_t pin) {
    return hal_pwm_get_analog_value_ext(pin);
}

uint32_t hal_pwm_get_analog_value_ext(uint16_t pin) {
    if (!isPwmPin(pin)) {
        return 0;
    }

    hal_pin_info_t* pinInfo = hal_pin_map() + pin;
    uint8_t instance = pinInfo->pwm_instance;
    uint8_t channel = pinInfo->pwm_channel;

    if (pwmInfo[instance].state != PWM_STATE_ENABLED) {
        return 0;
    }

    return pwmInfo[instance].channels[channel].value;
}

uint8_t hal_pwm_get_resolution(uint16_t pin) {
    if (!isPwmPin(pin)) {
        return 0;
    }
    const hal_pin_info_t* pinInfo = hal_pin_map() + pin;
    const uint8_t instance = pinInfo->pwm_instance;
    uint8_t channel = pinInfo->pwm_channel;
    if (pwmInfo[instance].state != PWM_STATE_ENABLED) {
        if (pwmTimBaseInit(&pwmInfo[instance]) != 0) {
            return 0;
        }
    }
    return pwmInfo[instance].channels[channel].resolution;
}

void hal_pwm_set_resolution(uint16_t pin, uint8_t resolution) {
    if (!isPwmPin(pin) || resolution > RTL_PWM_TIM_MAX_RESOLUTION || resolution < RTL_PWM_TIM_MIN_RESOLUTION) {
        return;
    }

    const hal_pin_info_t* pinInfo = hal_pin_map() + pin;
    const uint8_t instance = pinInfo->pwm_instance;
    uint8_t channel = pinInfo->pwm_channel;

    if (pwmInfo[instance].state != PWM_STATE_ENABLED) {
        if (pwmTimBaseInit(&pwmInfo[instance]) != 0) {
            return;
        }
    }

    uint32_t prePeriodCycles = (1 << pwmInfo[instance].channels[channel].resolution);
    uint32_t newPeriodCycles = (1 << resolution);
    pwmInfo[instance].channels[channel].resolution = resolution;
    pwmInfo[instance].channels[channel].value = ((float)pwmInfo[instance].channels[channel].value / prePeriodCycles) * newPeriodCycles;
}

void hal_pwm_reset_pin(uint16_t pin) {
    if (!isPwmPin(pin)) {
        return;
    }
    const hal_pin_info_t* pinInfo = hal_pin_map() + pin;
    const uint8_t instance = pinInfo->pwm_instance;
    const uint8_t channel = pinInfo->pwm_channel;

    if (pwmInfo[instance].state != PWM_STATE_ENABLED) {
        return;
    }

    // Stop PWM
    RTIM_CCxCmd(pwmInfo[instance].tim, channel, TIM_CCx_Disable);

    pwmPinDeinit(pin);

    // Disable the timer if all channels are deactivated
    bool disableTim = true;
    for (uint8_t ch = 0; ch < MAX_PWM_CHANNEL_NUM; ch++) {
        if (pwmInfo[instance].channels[ch].state == PWM_STATE_ENABLED) {
            disableTim = false;
            break;
        }
    }
    if (disableTim) {
        pwmTimBaseDeinit(&pwmInfo[instance]);
    }
}
